<?xml version="1.0"?>
<package format="2">
  <name>haas_vf2</name>
  <version>0.0.0</version>
  <description>The haas_vf2 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="adamarnold@brandeis.edu">adam</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>
    <build_depend>rviz</build_depend>
      <build_depend>xacro</build_depend>
    <build_depend>message_runtime</build_depend>
      <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

    
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
      <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
